# WebAgent-

./: .env  .gitignore  README.md  patch_sqlite.py  requirements.txt  run_app.py  streamlit_app.py
webagent/: README.md  pyproject.toml  report.md  research_report.md  run_app.py  run_streamlit.py  streamlit_app.py
webagent/src/webagent/: crew.py  main.py  report.md
webagent/src/webagent/config/: agents.yaml  tasks.yaml
webagent/src/webagent/tools/: __init__.py  content_analyzer_tool.py  news_aggregator_tool.py  web_scraper_tool.py  web_search_tool.py
