[project]
name = "webagent"
version = "0.1.0"
description = "A web research agent that compiles research reports based on user queries"
authors = [
    { name = "Web Agent Developer", email = "developer@webagent.com" }
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "crewai>=0.11.0,<1.0.0",
    "langchain>=0.1.0,<1.0.0",
    "streamlit>=1.30.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[project.scripts]
streamlit = "webagent.run_app:main"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"
